Fixed navbar not hiding and hamburger menu not visible

--- a/styles.css
+++ b/styles.css
@@ -53,11 +53,23 @@ nav {
   font-size: 24px;
   text-transform: uppercase;
   font-weight: 900;
+}
+
+/* Navbar Site Title */
+
+.navbar-custom .navbar-brand,
+.navbar-custom .navbar-text {
   color: var(--navbar_logo_text);
 }
 
-.navbar-brand:hover {
+.navbar-custom .navbar-brand:hover {
   color: var(--navbar_logo_text_highlight);
+}
+
+/* Navbar Links */
+
+.navbar-dark .navbar-toggler-icon {
+  color: var(--navbar_logo_text);
 }
 
 .navbar-nav .nav-item .nav-link {
@@ -68,6 +80,8 @@ nav {
 .navbar-nav .nav-item:hover .nav-link {
   color: var(--navbar_text_highlight);
 }
+
+/* Navbar Dropdown Menu */
 
 .navbar-nav > li > .dropdown-menu {
   background-color: var(--navbar_dropdown);
